--- a/AS5x47U_stm32.ioc
+++ b/AS5x47U_stm32.ioc
@@ -6,30 +6,35 @@ Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART3
-Mcu.IP5=USB_OTG_HS
-Mcu.IPNb=6
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=USART3
+Mcu.IP6=USB_OTG_HS
+Mcu.IPNb=7
 Mcu.Name=STM32H7A3Z(G-I)TxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PG7
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PE1
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin10=PB14
+Mcu.Pin11=PD8
+Mcu.Pin12=PD9
+Mcu.Pin13=PG7
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PB6
+Mcu.Pin19=PE1
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin3=PF10
 Mcu.Pin4=PH0-OSC_IN
 Mcu.Pin5=PH1-OSC_OUT
-Mcu.Pin6=PB0
-Mcu.Pin7=PB14
-Mcu.Pin8=PD8
-Mcu.Pin9=PD9
-Mcu.PinsNb=17
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7A3ZITxQ
@@ -61,6 +66,12 @@ PA12.GPIO_Label=USB_FS_P [USBLC6-2SC6_IO_2]
 PA12.Locked=true
 PA12.Mode=OTG/Dual-Role-Device-FS
 PA12.Signal=USB_OTG_HS_DP
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USB_FS_VBUS  [ZX62RD-AB-5P8_VBUS]
 PA9.Locked=true
@@ -74,6 +85,10 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 (Red Led)
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SPI1_CS
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 (Blue PushButton)
 PC13.Locked=true
@@ -147,7 +162,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=96000000
 RCC.AHB4Freq_Value=96000000
@@ -229,6 +244,16 @@ RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=8000000
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI1.CRCPolynomial=0x1d
+SPI1.CalculateBaudRate=6.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_24BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CRCCalculation,CRCPolynomial,CLKPhase,DataSize,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
