--- a/AS5x47U_stm32.ioc
+++ b/AS5x47U_stm32.ioc
@@ -1,16 +1,28 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
+CRC.CRCLength=CRC_POLYLENGTH_8B
+CRC.DefaultInitValueUse=DEFAULT_INIT_VALUE_DISABLE
+CRC.DefaultPolynomialUse=DEFAULT_POLYNOMIAL_DISABLE
+CRC.GeneratingPolynomial=X4+X3+X2+X0
+CRC.IPParameters=DefaultPolynomialUse,DefaultInitValueUse,CRCLength,GeneratingPolynomial,InitValue
+CRC.InitValue=0xC4
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32H7A3ZIT6Q
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART3
-Mcu.IP6=USB_OTG_HS
-Mcu.IPNb=7
+Mcu.IP1=CRC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=USART3
+Mcu.IP8=USB_OTG_HS
+Mcu.IPNb=9
 Mcu.Name=STM32H7A3Z(G-I)TxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -26,7 +38,9 @@ Mcu.Pin17=PA12
 Mcu.Pin18=PB6
 Mcu.Pin19=PE1
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin20=VP_CRC_VS_CRC
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PF10
 Mcu.Pin4=PH0-OSC_IN
 Mcu.Pin5=PH1-OSC_OUT
@@ -34,12 +48,12 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=21
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7A3ZITxQ
-MxCube.Version=6.6.1
-MxDb.Version=DB.6.0.60
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -144,7 +158,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H7A3ZITxQ
-ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.10.0
+ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.11.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -157,86 +171,90 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=AS5x47U_stm32.ioc
 ProjectManager.ProjectName=AS5x47U_stm32
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
-RCC.AHB12Freq_Value=96000000
-RCC.AHB4Freq_Value=96000000
-RCC.APB1Freq_Value=96000000
-RCC.APB2Freq_Value=96000000
-RCC.APB3Freq_Value=96000000
-RCC.APB4Freq_Value=96000000
-RCC.AXIClockFreq_Value=96000000
-RCC.CDCPREFreq_Value=96000000
+RCC.AHB12Freq_Value=65000000
+RCC.AHB4Freq_Value=65000000
+RCC.APB1Freq_Value=65000000
+RCC.APB2Freq_Value=65000000
+RCC.APB3Freq_Value=65000000
+RCC.APB4Freq_Value=65000000
+RCC.AXIClockFreq_Value=65000000
+RCC.CDCPREFreq_Value=65000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=96000000
-RCC.CpuClockFreq_Value=96000000
+RCC.CortexFreq_Value=65000000
+RCC.CpuClockFreq_Value=65000000
 RCC.DAC1Freq_Value=32000
-RCC.DFSDM2ACLkFreq_Value=96000000
-RCC.DFSDM2Freq_Value=96000000
-RCC.DFSDMACLkFreq_Value=48000000
-RCC.DFSDMFreq_Value=96000000
+RCC.DAC2Freq_Value=32000
+RCC.DFSDM2ACLkFreq_Value=65000000
+RCC.DFSDM2Freq_Value=65000000
+RCC.DFSDMACLkFreq_Value=10000000
+RCC.DFSDMFreq_Value=65000000
 RCC.DIVM1=1
 RCC.DIVM3=1
-RCC.DIVN1=24
+RCC.DIVN1=16
 RCC.DIVN3=24
-RCC.DIVP1Freq_Value=96000000
+RCC.DIVP1Freq_Value=65000000
 RCC.DIVP2Freq_Value=16125000
 RCC.DIVP3Freq_Value=96000000
-RCC.DIVQ1=4
-RCC.DIVQ1Freq_Value=48000000
+RCC.DIVQ1=13
+RCC.DIVQ1Freq_Value=10000000
 RCC.DIVQ2Freq_Value=16125000
 RCC.DIVQ3Freq_Value=96000000
-RCC.DIVR1Freq_Value=96000000
+RCC.DIVR1Freq_Value=65000000
 RCC.DIVR2Freq_Value=16125000
 RCC.DIVR3Freq_Value=96000000
-RCC.FDCANFreq_Value=48000000
-RCC.FMCFreq_Value=96000000
+RCC.FDCANFreq_Value=10000000
+RCC.FMCFreq_Value=65000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=96000000
-RCC.HCLKFreq_Value=96000000
+RCC.HCLK3ClockFreq_Value=65000000
+RCC.HCLKFreq_Value=65000000
 RCC.HSE_VALUE=8000000
-RCC.I2C123Freq_Value=96000000
-RCC.I2C4Freq_Value=96000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM3,DIVN1,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=96000000
-RCC.LPTIM2Freq_Value=96000000
-RCC.LPTIM345Freq_Value=96000000
-RCC.LPUART1Freq_Value=96000000
+RCC.I2C123Freq_Value=65000000
+RCC.I2C4Freq_Value=65000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM3,DIVN1,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=65000000
+RCC.LPTIM2Freq_Value=65000000
+RCC.LPTIM345Freq_Value=65000000
+RCC.LPUART1Freq_Value=65000000
 RCC.LTDCFreq_Value=96000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=96000000
-RCC.PLLFRACN=0
+RCC.MCO2PinFreq_Value=65000000
+RCC.PLLFRACN=2048
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE0
-RCC.QSPIFreq_Value=96000000
+RCC.QSPIFreq_Value=65000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=48000000
-RCC.SAI2AFreq_Value=48000000
-RCC.SAI2BFreq_Value=48000000
-RCC.SDMMCFreq_Value=48000000
-RCC.SPDIFRXFreq_Value=48000000
-RCC.SPI123Freq_Value=48000000
-RCC.SPI45Freq_Value=96000000
-RCC.SPI6Freq_Value=96000000
-RCC.SWPMI1Freq_Value=96000000
-RCC.SYSCLKFreq_VALUE=96000000
+RCC.SAI1Freq_Value=10000000
+RCC.SAI2AFreq_Value=10000000
+RCC.SAI2BFreq_Value=10000000
+RCC.SDMMCFreq_Value=10000000
+RCC.SPDIFRXFreq_Value=10000000
+RCC.SPI123Freq_Value=10000000
+RCC.SPI45Freq_Value=65000000
+RCC.SPI6Freq_Value=65000000
+RCC.SWPMI1Freq_Value=65000000
+RCC.SYSCLKFreq_VALUE=65000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.SupplySource=PWR_DIRECT_SMPS_SUPPLY
-RCC.Tim1OutputFreq_Value=96000000
-RCC.Tim2OutputFreq_Value=96000000
+RCC.Tim1OutputFreq_Value=65000000
+RCC.Tim2OutputFreq_Value=65000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=96000000
-RCC.USART234578Freq_Value=96000000
+RCC.USART16Freq_Value=65000000
+RCC.USART234578Freq_Value=65000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.USBFreq_Value=48000000
-RCC.VCO1OutputFreq_Value=192000000
+RCC.VCO1OutputFreq_Value=130000000
 RCC.VCO2OutputFreq_Value=32250000
 RCC.VCO3OutputFreq_Value=192000000
 RCC.VCOInput1Freq_Value=8000000
@@ -244,20 +262,25 @@ RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=8000000
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CRCPolynomial=0x1d
-SPI1.CalculateBaudRate=6.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_24BIT
+SPI1.CRCPolynomial=0x11d
+SPI1.CalculateBaudRate=156.25 KBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CRCCalculation,CRCPolynomial,CLKPhase,DataSize,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CRCCalculation,CRCPolynomial,CLKPhase,DataSize,BaudRatePrescaler,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-H7A3ZI-Q
 boardIOC=true
 isbadioc=false
