read register function broken; not fixed yet

--- a/AS5x47U_stm32.ioc
+++ b/AS5x47U_stm32.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32H7A3ZIT6Q
@@ -6,40 +9,43 @@ Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SPI1
+Mcu.IP3=SPI4
 Mcu.IP4=SYS
-Mcu.IP5=USART3
-Mcu.IP6=USB_OTG_HS
-Mcu.IPNb=7
+Mcu.IP5=TIM2
+Mcu.IP6=USART3
+Mcu.IP7=USB_OTG_HS
+Mcu.IPNb=8
 Mcu.Name=STM32H7A3Z(G-I)TxQ
 Mcu.Package=LQFP144
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB14
-Mcu.Pin11=PD8
-Mcu.Pin12=PD9
-Mcu.Pin13=PG7
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PB6
-Mcu.Pin19=PE1
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin3=PF10
-Mcu.Pin4=PH0-OSC_IN
-Mcu.Pin5=PH1-OSC_OUT
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=21
+Mcu.Pin0=PE2
+Mcu.Pin1=PE4
+Mcu.Pin10=PB0
+Mcu.Pin11=PB14
+Mcu.Pin12=PD8
+Mcu.Pin13=PD9
+Mcu.Pin14=PG7
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PB6
+Mcu.Pin2=PE5
+Mcu.Pin20=PE1
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin3=PE6
+Mcu.Pin4=PC13
+Mcu.Pin5=PC14-OSC32_IN
+Mcu.Pin6=PC15-OSC32_OUT
+Mcu.Pin7=PF10
+Mcu.Pin8=PH0-OSC_IN
+Mcu.Pin9=PH1-OSC_OUT
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7A3ZITxQ
-MxCube.Version=6.6.1
-MxDb.Version=DB.6.0.60
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -66,12 +72,6 @@ PA12.GPIO_Label=USB_FS_P [USBLC6-2SC6_IO_2]
 PA12.Locked=true
 PA12.Mode=OTG/Dual-Role-Device-FS
 PA12.Signal=USB_OTG_HS_DP
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USB_FS_VBUS  [ZX62RD-AB-5P8_VBUS]
 PA9.Locked=true
@@ -117,6 +117,16 @@ PE1.GPIOParameters=GPIO_Label
 PE1.GPIO_Label=LD2 (Yellow Led)
 PE1.Locked=true
 PE1.Signal=GPIO_Output
+PE2.Mode=Full_Duplex_Master
+PE2.Signal=SPI4_SCK
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=SPI4_CS
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE5.Mode=Full_Duplex_Master
+PE5.Signal=SPI4_MISO
+PE6.Mode=Full_Duplex_Master
+PE6.Signal=SPI4_MOSI
 PF10.GPIOParameters=GPIO_Label
 PF10.GPIO_Label=USB_FS_PWR_EN [STMPS2141STR_EN]
 PF10.Locked=true
@@ -144,7 +154,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H7A3ZITxQ
-ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.10.0
+ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.11.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -157,12 +167,15 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=AS5x47U_stm32.ioc
 ProjectManager.ProjectName=AS5x47U_stm32
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_SPI4_Init-SPI4-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=96000000
 RCC.AHB4Freq_Value=96000000
@@ -177,6 +190,7 @@ RCC.CKPERFreq_Value=64000000
 RCC.CortexFreq_Value=96000000
 RCC.CpuClockFreq_Value=96000000
 RCC.DAC1Freq_Value=32000
+RCC.DAC2Freq_Value=32000
 RCC.DFSDM2ACLkFreq_Value=96000000
 RCC.DFSDM2Freq_Value=96000000
 RCC.DFSDMACLkFreq_Value=48000000
@@ -203,7 +217,7 @@ RCC.HCLKFreq_Value=96000000
 RCC.HSE_VALUE=8000000
 RCC.I2C123Freq_Value=96000000
 RCC.I2C4Freq_Value=96000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM3,DIVN1,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM3,DIVN1,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=96000000
 RCC.LPTIM2Freq_Value=96000000
 RCC.LPTIM345Freq_Value=96000000
@@ -244,20 +258,25 @@ RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=8000000
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CRCPolynomial=0x1d
-SPI1.CalculateBaudRate=6.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_24BIT
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CRCCalculation,CRCPolynomial,CLKPhase,DataSize,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI4.CLKPhase=SPI_PHASE_2EDGE
+SPI4.CalculateBaudRate=1.5 MBits/s
+SPI4.DataSize=SPI_DATASIZE_16BIT
+SPI4.Direction=SPI_DIRECTION_2LINES
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase,NSSPMode
+SPI4.Mode=SPI_MODE_MASTER
+SPI4.NSSPMode=SPI_NSS_PULSE_DISABLE
+SPI4.VirtualType=VM_MASTER
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=AutoReloadPreload,Prescaler,Period
+TIM2.Period=4294967295
+TIM2.Prescaler=96-1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-H7A3ZI-Q
 boardIOC=true
 isbadioc=false
