read register working with 16-bit messages

--- a/AS5x47U_stm32.ioc
+++ b/AS5x47U_stm32.ioc
@@ -3,6 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32H7A3ZIT6Q
 Mcu.Family=STM32H7
@@ -117,12 +118,18 @@ PE1.GPIOParameters=GPIO_Label
 PE1.GPIO_Label=LD2 (Yellow Led)
 PE1.Locked=true
 PE1.Signal=GPIO_Output
+PE2.GPIOParameters=GPIO_PuPd
+PE2.GPIO_PuPd=GPIO_NOPULL
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
-PE4.GPIOParameters=GPIO_Label
+PE4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=SPI4_CS
+PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
+PE4.PinState=GPIO_PIN_SET
 PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_PuPd
+PE5.GPIO_PuPd=GPIO_NOPULL
 PE5.Mode=Full_Duplex_Master
 PE5.Signal=SPI4_MISO
 PE6.Mode=Full_Duplex_Master
@@ -260,10 +267,11 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI4.CLKPhase=SPI_PHASE_2EDGE
+SPI4.CLKPolarity=SPI_POLARITY_LOW
 SPI4.CalculateBaudRate=1.5 MBits/s
 SPI4.DataSize=SPI_DATASIZE_16BIT
 SPI4.Direction=SPI_DIRECTION_2LINES
-SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase,NSSPMode
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase,NSSPMode,CLKPolarity
 SPI4.Mode=SPI_MODE_MASTER
 SPI4.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI4.VirtualType=VM_MASTER
